--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
-    },
+    "preview": "vite preview",
+    "deploy": "sh deploy.sh"
+  },
   "dependencies": {
     "vue": "^3.2.25"
   },
